--- a/client/src/components/CreatePet/CreatePet.css
+++ b/client/src/components/CreatePet/CreatePet.css
@@ -1,6 +1,10 @@
 
 
-
+.formFlexItem{
+  display: "inline-flex";
+  justify-content: center;
+  align-items: center;
+}
 .containerGral{
     display: flex;
         flex-direction: column;
@@ -10,16 +14,20 @@
         align-items: center;
 }
 
+
 .containerForm{
- display: flex;
+            display: flex;
             flex-direction: column;
+            justify-content: center;
             width: 80%;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
                 rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
             padding: 10px 15px;
+            margin-top: -1em;
             border-radius: 8px;
             /* border: 1px solid #000; */
 }
+
 
 
 
