--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -1,8 +1,51 @@
 .color{
-
     height: 100vh;
     width: 100vw;
     margin-top: 5rem;
     color:black,
+}
+.color .recuadro {
+	border-radius: 8px; 
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+	min-width: 600px;
+	margin-top: 120px;
+	background: #f7f4f4;
+	padding: 60px;
+}
 
+ul {
+    list-style-type:square;
+    text-align: start;
+    padding: 25px;
+}
+
+li {
+    padding: 10px;
+}
+
+h1 {
+    padding-bottom: 30px;
+    text-decoration-line: underline;
+}
+
+h2 {
+    padding-top: 15px;
+    text-align: start;
+    text-decoration-line: underline;
+    border-top-style: solid;
+    border-width: 0.5px;
+}
+
+.color .recuadro .aboutUs {
+    text-align: justify;
+    padding-bottom: 25px;
+    border-bottom-style: solid;
+    border-width: 0.5px;
+}
+img{
+    padding-bottom: 15px;
+    padding-top: 15px;
+    
+    
 }
